--- a/HMIN309_TP3/HMIN309_TP3.csproj
+++ b/HMIN309_TP3/HMIN309_TP3.csproj
@@ -56,6 +56,7 @@
     <Reference Include="Mono.Android" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Adapters\EventAdapter.cs" />
     <Compile Include="Database\DatabaseHelper.cs" />
     <Compile Include="Fragments\HomeFragment.cs" />
     <Compile Include="Fragments\EventCreationFragment.cs" />
@@ -122,6 +123,12 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\list_item.axml">
+      <Generator>MSBuild:UpdateGeneratedFiles</Generator>
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\event_row.axml">
       <Generator>MSBuild:UpdateGeneratedFiles</Generator>
       <SubType>Designer</SubType>
     </AndroidResource>
