--- a/HMIN309_TP3/HMIN309_TP3.csproj
+++ b/HMIN309_TP3/HMIN309_TP3.csproj
@@ -58,6 +58,7 @@
   <ItemGroup>
     <Compile Include="Adapters\EventAdapter.cs" />
     <Compile Include="Database\DatabaseHelper.cs" />
+    <Compile Include="Fragments\DatePickerFragment.cs" />
     <Compile Include="Fragments\HomeFragment.cs" />
     <Compile Include="Fragments\EventCreationFragment.cs" />
     <Compile Include="MainActivity.cs" />
