--- a/HMIN309_TP3/HMIN309_TP3/HMIN309_TP3.csproj
+++ b/HMIN309_TP3/HMIN309_TP3/HMIN309_TP3.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="sqlite-net-pcl" Version="1.5.231" />
+    <PackageReference Include="Xam.Plugins.Notifier" Version="3.0.1" />
     <PackageReference Include="Xamarin.Forms" Version="3.3.0.967583" />  
   </ItemGroup>
 </Project>
