--- a/HMIN309_TP3/HMIN309_TP3.Android/Properties/AndroidManifest.xml
+++ b/HMIN309_TP3/HMIN309_TP3.Android/Properties/AndroidManifest.xml
@@ -1,5 +1,13 @@
-<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname">
-    <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="27" />
-    <application android:label="HMIN309_TP3.Android"></application>
+﻿<?xml version="1.0" encoding="utf-8"?>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="fr.harkame" android:installLocation="preferExternal">
+	<uses-sdk android:minSdkVersion="24" android:targetSdkVersion="27" />
+	<uses-permission android:name="android.permission.CAMERA" />
+	<permission android:name="com.company.app.fileprovider.READ" />
+	<uses-feature android:name="android.hardware.camera" />
+	<uses-feature android:name="android.hardware.camera.autofocus" />
+	<application android:label="HMIN309_TP3.Android">
+		<provider android:name="android.support.v4.content.FileProvider" android:authorities="fr.harkame.fileprovider" android:exported="false" android:grantUriPermissions="true">
+			<meta-data android:name="android.support.FILE_PROVIDER_PATHS" android:resource="@xml/provider_paths"></meta-data>
+		</provider>
+	</application>
 </manifest>
