--- a/HMIN309_TP3/HMIN309_TP3.iOS/HMIN309_TP3.iOS.csproj
+++ b/HMIN309_TP3/HMIN309_TP3.iOS/HMIN309_TP3.iOS.csproj
@@ -136,6 +136,9 @@
     <PackageReference Include="sqlite-net-pcl">
       <Version>1.5.231</Version>
     </PackageReference>
+    <PackageReference Include="Xam.Plugin.Media">
+      <Version>4.0.1.5</Version>
+    </PackageReference>
     <PackageReference Include="Xam.Plugins.Notifier">
       <Version>3.0.1</Version>
     </PackageReference>
