--- a/HMIN309_TP3/HMIN309_TP3.Android/Properties/AndroidManifest.xml
+++ b/HMIN309_TP3/HMIN309_TP3.Android/Properties/AndroidManifest.xml
@@ -2,10 +2,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="fr.harkame" android:installLocation="preferExternal">
 	<uses-sdk android:minSdkVersion="24" android:targetSdkVersion="27" />
 	<uses-permission android:name="android.permission.CAMERA" />
+	<uses-permission android:name="android.permission.READ_PROFILE" />
+	<uses-permission android:name="android.permission.WRITE_PROFILE" />
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 	<permission android:name="com.company.app.fileprovider.READ" />
 	<uses-feature android:name="android.hardware.camera" />
 	<uses-feature android:name="android.hardware.camera.autofocus" />
 	<application android:label="HMIN309_TP3.Android">
+		<meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="AIzaSyBQ9s-I2YGlocgEKe0fVUid6mUqacCaqbE" />
 		<provider android:name="android.support.v4.content.FileProvider" android:authorities="fr.harkame.fileprovider" android:exported="false" android:grantUriPermissions="true">
 			<meta-data android:name="android.support.FILE_PROVIDER_PATHS" android:resource="@xml/provider_paths"></meta-data>
 		</provider>
